--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^20.3.2",
-    "@vue/compiler-sfc": "^3.3.4",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.5",
-    "vue-template-compiler": "^2.7.14"
+    "typescript": "^5.1.5"
   }
 }
